# ml_linear_regression

./: README.md  package.xml  setup.cfg  setup.py
data/: new_height_weight.csv
launch/: regression.launch.py
ml_linear_regression/: brain_weight_predictor_node.py  house_price_predictor_node.py  test_boston_housing_node.py  test_brain_weight_node.py  test_height_publisher.py  test_height_weight_node.py  test_inputs_publisher.py  test_size_publisher.py  train_node.py  weight_predictor_node.py
